packages/react-components/src/components/Facet/styles.css
$padding: 25px;
$horizontal-background: white;

.root{
  border-top: 1px solid $color-grey-2;
  &:last-child{
    margin-bottom: 0;
  }
  &.horizontal{
    background: $horizontal-background;
    flex: 1 1 auto;
    position: relative;
  }
}


.title{
  width: 100%;
  text-align: left;
  display: flex;
  padding: $padding;
  .horizontal &{
    background: $horizontal-background;
  }
}

.text {
  $color: $color-black;
  $font-family: $font-base;
  $font-size: 1;
  font-size: calc($font-size-small * $font-size);
  font-family: $font-family;
  color: $color;
  flex: 1 1 0%;
}

.icon {
  vertical-align: middle;
}

.body{
  $padding: 0 25px 25px 25px;
  margin-top: -15px;
  padding: $padding;
  .horizontal &{
    background: $horizontal-background;
    position: absolute;
    z-index: 3;
    min-width: 100%;
    box-sizing: border-box;
  }
  &[hidden]{
    display: none;
  }
}

